objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SBE__c</fullName>
        <label>SBE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytical Sciences</fullName>
                </value>
                <value>
                    <fullName>GDS</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>Molecular Medicine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>case( Family ,&quot;12-ESS&quot;, if ( Item_Class__c =&quot;1&quot;, IGOR_Description__c ,if( Item_Class__c =&quot;4&quot;,&quot;Accessories&quot;,if( Item_Class__c =&quot;A&quot;,&quot;Software&quot;,if( Item_Class__c =&quot;E&quot;,&quot;Custom Software&quot;,if( Item_Class__c =&quot;H&quot;,&quot;Support,Training,Consult&quot;,&quot;Other&quot;))))),if ( Item_Class__c =&quot;1&quot;, IGOR_Description__c ,if( Item_Class__c =&quot;2&quot;,IGOR_Description__c,if( Item_Class__c =&quot;3&quot;,&quot;Consumable&quot;,if( Item_Class__c =&quot;4&quot;,&quot;Accessories&quot;,if( Item_Class__c =&quot;B&quot;,&quot;Reagents&quot;,if( Item_Class__c =&quot;0&quot;,IGOR_Description__c,&quot;Other&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify if a product is in SAP</description>
        <label>In SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top200__c</fullName>
        <label>Top200</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnum__c</fullName>
        <description>Unique External Id that stores the Material ID from QS3 . Same as SAP Product code.
Same as Material Number from SAP.</description>
        <externalId>true</externalId>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>use this field to show data that is updated in a batch mode</description>
        <label>updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGOR_PAC__c</fullName>
        <label>IGOR_PAC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>obsolete__c</fullName>
        <description>designation of product status</description>
        <label>obsolete</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Split__c</fullName>
        <label>Split</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>CALP product legacy ID needed for data load</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Type__c</fullName>
        <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
        <label>Part Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Buy__c</fullName>
        <description>This field is created per request from Big Machines in order to keep those who use the quoting application from selecting certain parts to add to the quote.</description>
        <label>Direct Buy</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Class__c</fullName>
        <label>IGOR Item Class</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Id</formula>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIOP_Model__c</fullName>
        <label>SIOP Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_of_M_INF__c</fullName>
        <label>U of M</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top200_Desc__c</fullName>
        <label>Top200_Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frozen_Costs__c</fullName>
        <description>CALP products to be loaded with Oracle fully loaded cost, Frozen Cost</description>
        <label>Frozen Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPI_End_Date__c</fullName>
        <label>NPI End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Platform_INF__c</fullName>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_line__c</fullName>
        <description>Product Line code from SAP</description>
        <label>Product Line</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Level1__c</fullName>
        <formula>case( Family ,&quot;12-ESS&quot;,if ( Item_Class__c =&quot;1&quot;, IGOR_Description__c ,if( Item_Class__c =&quot;4&quot;,&quot;Accessories&quot;,if( Item_Class__c =&quot;A&quot;,&quot;Software&quot;,if( Item_Class__c =&quot;E&quot;,&quot;Custom Software&quot;,if( Item_Class__c =&quot;H&quot;,&quot;Support,Training,Consult&quot;,&quot;Other&quot;))))),if ( Item_Class__c =&quot;1&quot;, IGOR_Description__c ,if( Item_Class__c =&quot;2&quot;,&quot;Accessories&quot;,if( Item_Class__c =&quot;3&quot;,&quot;Consumable&quot;,if( Item_Class__c =&quot;4&quot;,&quot;Accessories&quot;,if( Item_Class__c =&quot;B&quot;,&quot;Reagents&quot;,&quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fcst Group 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_SF_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SF Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Start_Date__c</fullName>
        <label>NPI Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_DAS_Products__c</fullName>
        <formula>OR ( 
product_line__c = &quot;APS&quot;, product_line__c = &quot;ARS&quot;, product_line__c = &quot;AWS&quot;, product_line__c = &quot;CLH&quot;, product_line__c = &quot;CLR&quot;, product_line__c = &quot;DIS&quot;, product_line__c = &quot;FAP&quot;, product_line__c = &quot;HCS&quot;, product_line__c = &quot;HTS&quot;, product_line__c = &quot;IAS&quot;, product_line__c = &quot;INV&quot;, product_line__c = &quot;LVI&quot;, product_line__c = &quot;MFT&quot;, product_line__c = &quot;MLD&quot;, product_line__c = &quot;MOL&quot;, product_line__c = &quot;MOX&quot;, product_line__c = &quot;NMO&quot;, product_line__c = &quot;NVS&quot;, product_line__c = &quot;PBR&quot;, product_line__c = &quot;PGI&quot;, product_line__c = &quot;QTS&quot;, product_line__c = &quot;RRD&quot;, product_line__c = &quot;RRS&quot;, product_line__c = &quot;SPS&quot;, product_line__c = &quot;TBR&quot;, product_line__c = &quot;TIS&quot;, product_line__c = &quot;TSC&quot;, product_line__c = &quot;EZR&quot;, product_line__c = &quot;AA&quot;, product_line__c = &quot;ICP&quot;, product_line__c = &quot;MAS&quot;, product_line__c = &quot;GC&quot;, product_line__c = &quot;LC&quot;, product_line__c = &quot;LCM&quot;, product_line__c = &quot;IR&quot;, product_line__c = &quot;UVS&quot;, product_line__c = &quot;TEA&quot;, product_line__c = &quot;MMS&quot;, product_line__c = &quot;MBA&quot;, product_line__c = &quot;RAM&quot;, product_line__c = &quot;PER&quot;,product_line__c = &quot;HCA&quot;, product_line__c = &quot;AMP&quot;, product_line__c = &quot;DAB&quot;, product_line__c = &quot;DAO&quot;, product_line__c = &quot;DLP&quot;, product_line__c = &quot;EXT&quot;, product_line__c = &quot;FNP&quot;, product_line__c = &quot;GMP&quot;, product_line__c = &quot;IMF&quot;, product_line__c = &quot;IMG&quot;, product_line__c = &quot;LMP&quot;, product_line__c = &quot;RVA&quot;, product_line__c = &quot;SKC&quot;, product_line__c = &quot;TXV&quot;, product_line__c = &quot;CBS&quot;,product_line__c = &quot;AM&quot;, product_line__c = &quot;LM&quot;, text(Family)=&quot;72-PER&quot;,product_line__c = &quot;GCM&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is DAS Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_LST_Products__c</fullName>
        <description>REMOVE THIS FIELD AFTER LST FORECAST SETTINGS CHANGES MOVED</description>
        <formula>OR (
product_line__c = &quot;APS&quot;,product_line__c = &quot;AIG&quot;, product_line__c = &quot;ARS&quot;, product_line__c = &quot;EZR&quot;,product_line__c = &quot;AWS&quot;, product_line__c = &quot;CLH&quot;, product_line__c = &quot;CLR&quot;, product_line__c = &quot;DIS&quot;, product_line__c = &quot;DNA&quot;, product_line__c = &quot;FAP&quot;,product_line__c = &quot;HCA&quot;, product_line__c = &quot;HCS&quot;, product_line__c = &quot;HTS&quot;, product_line__c = &quot;IAS&quot;, product_line__c = &quot;INV&quot;, product_line__c = &quot;LVI&quot;, product_line__c = &quot;MFT&quot;, product_line__c = &quot;MLD&quot;, product_line__c = &quot;MOL&quot;, product_line__c = &quot;MOX&quot;, product_line__c = &quot;NMO&quot;, product_line__c = &quot;NVS&quot;, product_line__c = &quot;PBR&quot;, product_line__c = &quot;PGI&quot;, product_line__c = &quot;QTS&quot;, product_line__c = &quot;RRD&quot;, product_line__c = &quot;RRS&quot;, product_line__c = &quot;SPS&quot;, product_line__c = &quot;TIS&quot;, product_line__c = &quot;TSC&quot;, product_line__c = &quot;ANP&quot;, product_line__c = &quot;GPZ&quot;, product_line__c = &quot;TBR&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is LST Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EAN_UPC__c</fullName>
        <label>EAN UPC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Length_INF__c</fullName>
        <label>Term Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Discount__c</fullName>
        <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
        <label>Default Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IGOR_Description__c</fullName>
        <label>IGOR_PAC Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type_INF__c</fullName>
        <label>License Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Qty_UOM_Code__c</fullName>
        <description>Used for Boomi and SAP integration only.</description>
        <inlineHelpText>Used for Boomi and SAP integration only.</inlineHelpText>
        <label>Qty UOM Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookEntryID__c</fullName>
        <description>used for webmethods API</description>
        <label>PricebookEntryID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_INF__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Division__c</fullName>
        <label>Divison</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>Personal Subscription</fullName>
                </value>
                <value>
                    <fullName>Renewals Only</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Study</fullName>
                </value>
                <value>
                    <fullName>TIBCO Included</fullName>
                </value>
                <value>
                    <fullName>TIBCO Not Included</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Name__c</fullName>
        <label>Product Line Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_NetWeight__c</fullName>
        <label>Net Weight</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Business_Unit__c</fullName>
        <label>Sub Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APPLIED GENOMICS</fullName>
                </value>
                <value>
                    <fullName>BIO-D DISCO OPS</fullName>
                </value>
                <value>
                    <fullName>CLINICAL DIAGNOSTICS</fullName>
                </value>
                <value>
                    <fullName>EMERGING DIAGNOSTICS</fullName>
                </value>
                <value>
                    <fullName>EUROIMMUN</fullName>
                </value>
                <value>
                    <fullName>FOOD</fullName>
                </value>
                <value>
                    <fullName>GENETIC TESTING SERVICES</fullName>
                </value>
                <value>
                    <fullName>IMAGING &amp; DETECTION</fullName>
                </value>
                <value>
                    <fullName>INFORMATICS</fullName>
                </value>
                <value>
                    <fullName>INORGANIC</fullName>
                </value>
                <value>
                    <fullName>LIGHTING</fullName>
                </value>
                <value>
                    <fullName>MATERNAL FETAL HEALTH</fullName>
                </value>
                <value>
                    <fullName>MEDICAL IMAGING</fullName>
                </value>
                <value>
                    <fullName>MULTI-VENDOR</fullName>
                </value>
                <value>
                    <fullName>NEONATAL</fullName>
                </value>
                <value>
                    <fullName>NTD LABS</fullName>
                </value>
                <value>
                    <fullName>ONCOLOGY</fullName>
                </value>
                <value>
                    <fullName>ORGANIC</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PRODUCT LINE IN QUESTION</fullName>
                </value>
                <value>
                    <fullName>QUANTITATIVE PATHOLOGY</fullName>
                </value>
                <value>
                    <fullName>RADS &amp; SERVICE</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
                <value>
                    <fullName>SIGNATURE GENOMICS LAB</fullName>
                </value>
                <value>
                    <fullName>UNCODED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Product_Family__c</fullName>
        <label>INF Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Attivio</fullName>
                </value>
                <value>
                    <fullName>CBOE</fullName>
                </value>
                <value>
                    <fullName>ChemDraw Cloud</fullName>
                </value>
                <value>
                    <fullName>ChemDraw Prime</fullName>
                </value>
                <value>
                    <fullName>ChemDraw Professional</fullName>
                </value>
                <value>
                    <fullName>ChemOffice</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Elements</fullName>
                </value>
                <value>
                    <fullName>E-Notebook</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>High Content Profiler</fullName>
                </value>
                <value>
                    <fullName>iLab</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>InfomatiX</fullName>
                </value>
                <value>
                    <fullName>Lead Discovery Biologics</fullName>
                </value>
                <value>
                    <fullName>Lead Discovery Research</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>QAQC</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Signals</fullName>
                </value>
                <value>
                    <fullName>Signals Clinical</fullName>
                </value>
                <value>
                    <fullName>Signals Lead Discovery</fullName>
                </value>
                <value>
                    <fullName>Signals Notebook</fullName>
                </value>
                <value>
                    <fullName>Signals Screening</fullName>
                </value>
                <value>
                    <fullName>Signals Translational</fullName>
                </value>
                <value>
                    <fullName>Special License</fullName>
                </value>
                <value>
                    <fullName>Special Maintenance</fullName>
                </value>
                <value>
                    <fullName>Special SAAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_Flag_for_dedup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the problematic products during the dedup process</description>
        <label>PKI Flag for dedup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIOP_Product_Group__c</fullName>
        <label>SIOP Product Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WeightUnit__c</fullName>
        <label>Weight Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_GrossWeight__c</fullName>
        <label>Gross Weight</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Duplicate_Identifier__c</fullName>
        <formula>&apos;T&apos;&amp; ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGOR_Item_Class_Desc__c</fullName>
        <label>IGOR Item Class Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Dealers__c</fullName>
        <description>Product Name for Dealers</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DeletionFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_UnitOfWeight__c</fullName>
        <description>Unit of weight (allowed packaging weight)</description>
        <inlineHelpText>Unit of weight (allowed packaging weight)</inlineHelpText>
        <label>Unit of Weight</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_B_for_Print__c</fullName>
        <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
        <label>Schedule B for Print</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT_FORMULA__c</fullName>
        <formula>IF(ISBLANK( product_line__c), &quot;&quot;, 
IF(CONTAINS(&quot;DL:AIG:ECO:FAB:LOP:OTH:PHM:IR:PUF:UVP:UVS:ICP:LAA:TA:TEA:ABG:AGP:BLC:CDS:CE:CHM:DNH:DNP:DNV:DU:HID:ASO:LCM:MGA:MIG:MMB:NIR:OCC:PBC:PBG:PCS:PHV:PSN:SDS:TRX:UPA:LHO:WEB:UV:LC:MAS:AGN:BIZ:BMC:CPC:DNE:DNS:ESI:SVC:GCM:PER:EMV:DCS:DLS:DSS:PIV:FLR:AA:-DU:BLS:DDV:DEL:MMS:MBA:IMG:AM:DAB:DAO:EXT:FN:GM:IMF:LM:RVA:SKC:TXV:CHD:GC:BIM:CRS:RAM:MCO:SVO:SVA:FTF:MET:CHO:BIO:ASE:CDI&quot;, product_line__c), &quot;ENVIRONMENTAL&quot;, 
IF(CONTAINS(&quot;MAO:CRT:NEO:PRE:APS:AWS:SPS:CSC:MDX:CRD:NLB:GSO:RES:BAR:DIAC:DLF:NTD:EIM:VNT:NAP:NMO:MOX:CLH:MFT:SGL:ILB:BBT:GSG:CCM:ONC:GEN:DIA:ICL:CMG:DNA:SDO:CHS:SBD:EDO:PCR:TLP:VIR:ARS:NEX:MSD:AGO:RHS&quot;, product_line__c), &quot;DIAGNOSTICS&quot;, 
IF(CONTAINS(&quot;ASY&quot;,product_line__c), &quot;ILLUMINATION &amp; DETECTION SERVICES&quot;,
IF(CONTAINS(&quot;CHE:ESS:LIM:ELM:GPZ:ENT:QAS:AVS:AVC:ISS:DSK:SIG:IFO:ATT:SPL&quot;,product_line__c), &quot;INFORMATICS&quot;,
IF(CONTAINS(&quot;IDO:RSO:MPS:TIP:TKS:ANP:FGP:ARI:ARP:CSA:GIP:LVI:MLD:PGI:PRD:SCN:SPT:TOF:MOL:RRC:RRS:PBR:HCS:IAS:PCL:MMO:LSB:MCB:TIS:INV:CLR:NVS:TSC:EZR:QPS:TBR:RRD:HTS:DIS:CKP:LSO:SER:NUC:FAP:QTS:HCA&quot;,product_line__c), &quot;LIFE SCIENCES&quot;,
IF(CONTAINS(&quot;SCI:DEX:CMS:ASG:ASP:MIO&quot;,product_line__c), &quot;MEDICAL IMAGING&quot;,
IF(CONTAINS(&quot;ABI:AGT:OMV:TMO:OSO:WAT:OSAM:OSC:OSSS:OSIS:OSRL:OSAI&quot;,product_line__c), &quot;ONESOURCE&quot;,
IF(CONTAINS(&quot;HTSC:ZZZ:HHO:EHO:BEA&quot;,product_line__c), &quot;UNCODED&quot;,
&quot;PRODUCT LINE IN QUESTION&quot;)))))))))</formula>
        <label>BUSINESS UNIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Hierarchy__c</fullName>
        <label>CPQ Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BasicMaterial__c</fullName>
        <label>Basic Material</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Discount_Type__c</fullName>
        <description>This field indicates a Product Type to be used for Contract discounting when different from the actual Product Type.</description>
        <inlineHelpText>This field indicates a Product Type to be used for Contract discounting when different from the actual Product Type.</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumable</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Service Parts</fullName>
                </value>
                <value>
                    <fullName>Other Parts</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Big_Machines_Prod_Desc__c</fullName>
        <label>Big Machines Prod Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Training_Price__c</fullName>
        <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
        <label>Advanced Training Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family_Numbered__c</fullName>
        <description>This field is created for reporting by Product Family for EH. This is in conjunction to the decision  taken on merging all EH product lines into one EH Product family (09/12/2013)</description>
        <label>Product Family Numbered</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompletedTxnNum__c</fullName>
        <label>Completed Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CurrentRevision__c</fullName>
        <label>Current Revision</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling_Price__c</fullName>
        <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
        <label>Shipping/Handling Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Bundle_or_A_La_Carte__c</fullName>
        <description>Defines how products are filtered on the product selection screen.</description>
        <inlineHelpText>Defines how products are filtered on the product selection screen.</inlineHelpText>
        <label>Bundle or A La Carte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>A La Carte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Fulfillment_Quantity__c</fullName>
        <description>Used for fulfillment purposes. Should be multiplied by the quantity to arrive at the actual quantity to provision to the customer.</description>
        <inlineHelpText>Used for fulfillment purposes. Should be multiplied by the quantity to arrive at the actual quantity to provision to the customer.</inlineHelpText>
        <label>Fulfillment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Maintenance_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents this product from triggering required approval if associated maintenance is removed</inlineHelpText>
        <label>Maintenance Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductHierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUB_BUSINESS_UNIT_FORMULA__c</fullName>
        <formula>IF(ISBLANK( product_line__c), &quot;&quot;, 
IF(CONTAINS(&quot;MDX:NAP:ARS:AWS:APS:CLH:MOX:NEX:MFT:SPS:AGO:RHS&quot;, product_line__c), &quot;APPLIED GENOMICS&quot;, 
IF(CONTAINS(&quot;NEO:CCM:PRE:DIA:CHS:MSD:VIR:NPT&quot;, product_line__c), &quot;REPRODUCTIVE HEALTH&quot;, 
IF(CONTAINS(&quot;MPS:TIP:TKS:ANP:FGP:ARI:ARP:CSA:GIP:PGI:PRD:SCN:SPT:TOF:RRC:PCL:MCB:NUC&quot;, product_line__c), &quot;BIO-D DISCO OPS&quot;, 
IF(CONTAINS(&quot;GEN&quot;, product_line__c), &quot;CORD BLOOD BANKING&quot;, 
IF(CONTAINS(&quot;UVP:UVS:TEA:FLR:MCO:RAM:IR:ICP:MAS:AA&quot;,product_line__c),&quot;SPECTROSCOPY&quot;, 
IF(CONTAINS(&quot;EIM&quot;, product_line__c), &quot;EUROIMMUN&quot;, 
IF(CONTAINS(&quot;PER:DCS:DLS:DSS:PIV:DEL:IMG:AM:DAB:DAO:DL:EXT:FN:GM:IMF:LM:RVA:SKC:TXV:FTF:BIO:CDI&quot;, product_line__c), &quot;FOOD&quot;, 
IF(CONTAINS(&quot;ILB:ICL &quot;, product_line__c), &quot;GENETIC TESTING SERVICES&quot;, 
IF(CONTAINS(&quot;GSG&quot;, product_line__c), &quot;GOOD START GENETICS&quot;, 
IF(CONTAINS(&quot;IDO:LVI:MLD:PBR:HCS:IAS:LSB:INV:EZR:QTS&quot;, product_line__c), &quot;IMAGING &amp; DETECTION&quot;, 
IF(CONTAINS(&quot;CHE:ESS:LIM:ELM:GPZ:ENT:QAS:AVS:AVC:ISS:DSK:SIG:IFO:ATT:SPL&quot;, product_line__c), &quot;INFORMATICS&quot;, 
IF(CONTAINS(&quot;ASY&quot;, product_line__c), &quot;LIGHTING&quot;, 
IF(CONTAINS(&quot;SER&quot;, product_line__c), &quot;LS SERVICE&quot;, 
IF(CONTAINS(&quot;SCI:DEX:CMS:ASG:ASP:MIO&quot;, product_line__c), &quot;MEDICAL IMAGING&quot;, 
IF(CONTAINS(&quot;PUF:UV&quot;, product_line__c), &quot;MOLECULAR SPECTROSCOPY&quot;, 
IF(CONTAINS(&quot;ABI:AGT:OMV:TMO:OSO:WAT:OSAM:OSC:OSSS:OSIS:OSRL:OSAI&quot;, product_line__c), &quot;MULTI-VENDOR&quot;, 
IF(CONTAINS(&quot;NTD&quot;, product_line__c), &quot;NTD LABS&quot;, 
IF(CONTAINS(&quot;ONC&quot;, product_line__c), &quot;ONCOLOGY&quot;, 
IF(CONTAINS(&quot;CHD:CHO:GC:GCM:LC:LCM:MMS:MBA&quot;,product_line__c),&quot;CHROMATOGRAPHY&quot;, 
IF(CONTAINS(&quot;CSC:GSO:RES:BAR:DIAC:DLF:SDO:CRT:CRD:NLB:DNA:NMO:EDO:AIG:ECO:FAB:LOP:OTH:PHM:LAA:ABG:AGP:BLC:CDS:CE:CHM:DNH:DNP:DNV:DU:HID:ASO:MGA:MIG:MMB:NIR:OCC:PBC:PBG:PCS:PHV:PSN:SDS:TRX:UPA:LHO:WEB:AGN:BIZ:BMC:CPC:DNE:DNS:ESI:SVC:-DU:BLS:DDV:BIM:CRS:MMO:DIS:LSO:ASE&quot;, product_line__c), &quot;OTHER&quot;, 
IF(CONTAINS(&quot;TIS:NVS:TSC:QPS:TBR&quot;, product_line__c), &quot;QUANTITATIVE PATHOLOGY&quot;, 
IF(CONTAINS(&quot;RSO:MOL:RRS:CLR:RRD:HTS:CKP:FAP&quot;, product_line__c), &quot;RADS &amp; SERVICE&quot;, 
IF(CONTAINS(&quot;EMV:SVO:SVA:MET&quot;, product_line__c), &quot;SERVICE&quot;, 
IF(CONTAINS(&quot;SGL&quot;, product_line__c), &quot;SIGNATURE GENOMICS LAB&quot;, 
IF(CONTAINS(&quot;TA&quot;, product_line__c), &quot;THERMAL/ELEMENTAL&quot;, 
IF(CONTAINS(&quot;TLP&quot;, product_line__c), &quot;TULIP DIAGNOSTICS&quot;, 
IF(CONTAINS(&quot;HTSC:ZZZ:HHO:EHO:BEA&quot;, product_line__c), &quot;UNCODED&quot;, 
IF(CONTAINS(&quot;VNT&quot;, product_line__c), &quot;VERINATA HEALTH&quot;, 
&quot;PRODUCT LINE IN QUESTION&quot;)))))))))))))))))))))))))))))</formula>
        <label>SUB BUSINESS UNIT</label>
        <type>Text</type>
    </fields>
</CustomObject>